--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet"  href="style.css" />
 <div class="container">
  <header class="header">
    <h1 id="title" class="text-center">Netflix Survey Form</h1>
